--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".Activity2"
+            android:name=".admin_screen"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
